feat: improve rendering engine performance